# django_course

./: .gitignore  Dockerfile  pyproject.toml
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_alter_article_word_count.py  0004_article_creator.py
djangocourse/: settings.py  urls.py
djangocourse/settings/: local.py  production.py
tamplates/app/: base.html  create_article.html  delete_article.html  home.html  izmeni_tekst.html  kreiraj_tekst.html  obrisi_tekst.html  update_article.html
