[tool.poetry]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = ["Miroslav Zeljković <miroslavzeljkovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
python-decouple = "^3.8"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
